--- a/app/src/main/res/layout/custom_player_layout.xml
+++ b/app/src/main/res/layout/custom_player_layout.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/transparent"
-    android:paddingTop="32dp"
-    android:paddingBottom="56dp"
+    android:background="@color/transparent" android:paddingTop="32dp"
     android:layout_marginHorizontal="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -15,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="00:00"
-        android:textColor="@color/iconColor_outer"
+        android:textColor="@color/played_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/exo_progress" />
 
@@ -25,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="3:00"
-        android:textColor="@color/iconColor_outer"
+        android:textColor="@color/played_color"
         app:layout_constraintBottom_toBottomOf="@+id/exo_position"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/exo_position" />
@@ -45,8 +43,8 @@
 
     <ImageView
         android:id="@+id/play_pause"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -56,29 +54,31 @@
 
     <ImageView
         android:id="@+id/exo_repeat_toggle"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/player_icon"
+        android:layout_height="@dimen/player_icon"
+        android:layout_marginStart="32dp"
         android:src="@drawable/exo_controls_repeat_off"
-        app:layout_constraintBottom_toBottomOf="@+id/play_pause"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/play_pause" />
+        app:layout_constraintBottom_toBottomOf="@+id/exo_next"
+        app:layout_constraintStart_toEndOf="@+id/exo_next"
+        app:layout_constraintTop_toTopOf="@+id/exo_next" />
 
     <ImageView
         android:id="@+id/exo_shuffle"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/player_icon"
+        android:layout_height="@dimen/player_icon"
+        android:layout_marginEnd="32dp"
         android:src="@drawable/exo_controls_shuffle_off"
-        app:layout_constraintBottom_toBottomOf="@+id/play_pause"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/play_pause" />
+        app:layout_constraintBottom_toBottomOf="@+id/exo_prev"
+        app:layout_constraintEnd_toStartOf="@+id/exo_prev"
+        app:layout_constraintTop_toTopOf="@+id/exo_prev" />
 
     <ImageView
         android:id="@+id/exo_next"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="32dp"
         android:src="@drawable/exo_controls_next"
         app:layout_constraintBottom_toBottomOf="@+id/play_pause"
-        app:layout_constraintEnd_toStartOf="@+id/exo_repeat_toggle"
         app:layout_constraintStart_toEndOf="@+id/play_pause"
         app:layout_constraintTop_toTopOf="@+id/play_pause" />
 
@@ -86,10 +86,10 @@
         android:id="@+id/exo_prev"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="32dp"
         android:src="@drawable/exo_controls_previous"
         app:layout_constraintBottom_toBottomOf="@+id/play_pause"
         app:layout_constraintEnd_toStartOf="@+id/play_pause"
-        app:layout_constraintStart_toEndOf="@+id/exo_shuffle"
         app:layout_constraintTop_toTopOf="@+id/play_pause" />
 
 
