--- a/app/src/main/res/layout/fragment_arrange.xml
+++ b/app/src/main/res/layout/fragment_arrange.xml
@@ -7,13 +7,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     tools:context=".fragments.ArrangeFragment"
-    android:background="@color/background_color"
+    android:background="@color/transparent"
     >
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:nestedScrollingEnabled="false"
-
+        android:paddingBottom="120dp"
+        android:clipToPadding="false"
         android:id="@+id/recycler_view"/>
 
 </androidx.core.widget.NestedScrollView>
