--- a/app/src/main/res/layout/fragment_selection.xml
+++ b/app/src/main/res/layout/fragment_selection.xml
@@ -7,7 +7,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     tools:context=".fragments.SelectionFragment"
-    android:background="@color/background_color"
+    android:background="@color/transparent"
+    android:paddingBottom="120dp"
+    android:clipToPadding="false"
     >
 
 </androidx.recyclerview.widget.RecyclerView>
