--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -1,15 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@color/transparent"
+    android:orientation="vertical"
   >
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent"
+        >
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/recycler_view"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".fragments.TracksFragment"
-        android:background="@color/background_color"/>
+        android:background="@color/transparent"
+        android:paddingBottom="120dp"
+        android:clipToPadding="false"/>
+
+
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <TextView
+        android:id="@+id/no_song_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/abhaya_libre_bold"
+        android:layout_gravity="center"
+        android:text="No Songs"
+        android:textSize="32dp"
+        android:textColor="@color/iconColor"
+        android:visibility="gone"/>
+</LinearLayout>
